# harfbuzz_rs

./: .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs  update.sh
.github/workflows/: rust.yml
examples/: render.rs  simple.rs
harfbuzz/: Makefile.in  configure
harfbuzz/docs/: Makefile.in
harfbuzz/docs/html/: api-index-0-6-0.html  api-index-0-9-10.html  api-index-0-9-2.html  api-index-1-3-3.html  api-index-1-4-0.html  api-index-1-4-2.html  api-index-1-6-0.html  api-index-1-7-2.html  api-index-1-7-7.html  api-index-2-8-2.html  api-index-2-9-0.html  api-index-2-9-1.html  api-index-3-0-0.html  api-index-3-1-0.html  api-index-3-3-0.html  api-index-3-4-0.html  api-index-4-0-0.html  api-index-4-1-0.html  api-index-4-2-0.html  api-index-4-3-0.html  api-index-4-4-0.html  api-index-5-0-0.html  api-index-5-3-0.html  api-index-6-0-0.html  api-index-7-0-0.html  api-index-7-1-0.html  api-index-full.html  core-api.html  deprecated-api-index.html  fonts-and-faces-custom-functions.html  fonts-and-faces-variable.html  fonts-and-faces.html  getting-started.html  glyphs-and-rendering.html  harfbuzz-hb-aat-layout.html  harfbuzz-hb-blob.html  harfbuzz-hb-buffer.html  harfbuzz-hb-cairo.html  harfbuzz-hb-common.html  harfbuzz-hb-deprecated.html  (+49 more)
harfbuzz/perf/: Makefile.in
harfbuzz/src/: Makefile.in
harfbuzz/test/: Makefile.in
harfbuzz/test/api/: Makefile.in
harfbuzz/test/fuzzing/: Makefile.in
harfbuzz/test/shape/: Makefile.in
harfbuzz/test/shape/data/: Makefile.in
harfbuzz/test/shape/data/aots/: Makefile.in
harfbuzz/test/shape/data/in-house/: Makefile.in
harfbuzz/test/shape/data/text-rendering-tests/: Makefile.in
harfbuzz/test/subset/: Makefile.in
harfbuzz/test/subset/data/: Makefile.in
harfbuzz/test/subset/data/repack_tests/: Makefile.in
harfbuzz/test/threads/: Makefile.in
harfbuzz/util/: Makefile.in
src/: bindings.rs  blob.rs  buffer.rs  common.rs  draw_funcs.rs  face.rs  font.rs  font_funcs.rs  freetype.rs  lib.rs  rusttype.rs  update.sh
src/harfbuzz/: Makefile.in
src/harfbuzz/docs/: Makefile.in
src/harfbuzz/docs/html/: a-simple-shaping-example.html  api-index-1-8-0.html  api-index-2-7-3.html  api-index-3-1-0.html  api-index-full.html  building.html  deprecated-api-index.html  harfbuzz-hb-buffer.html  harfbuzz-hb-common.html  harfbuzz-hb-deprecated.html  harfbuzz-hb-directwrite.html  harfbuzz-hb-face.html  harfbuzz-hb-ot-layout.html  harfbuzz-hb-set.html  harfbuzz-hb-version.html  harfbuzz.devhelp2  index.html  install-harfbuzz.html  reference-manual.html  style-api.html  subset-api.html
src/harfbuzz/src/: Makefile.in
src/harfbuzz/test/shape/data/text-rendering-tests/: Makefile.in
src/harfbuzz/test/subset/: Makefile.in
src/harfbuzz/util/: Makefile.in
testfiles/: MinionPro-Regular.ttx  Optima#2.ttx  Optima.ttx
untitled/: Cargo.toml
