[package]
name = "harfbuzz_rs"
version = "1.2.1-alpha.0"
authors = ["Manuel Reinhardt <manuel.rhdt@gmail.com>"]
description = "A high-level interface to HarfBuzz, exposing its most important functionality in a safe manner using Rust."
repository = "https://github.com/manuel-rhdt/harfbuzz_rs"
readme = "README.md"
keywords = ["text", "ffi", "textlayout", "shaping", "harfbuzz"]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "internationalization",
    "text-processing"
]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "manuel-rhdt/harfbuzz_rs", branch = "master" }
appveyor = { repository = "manuel-rhdt/harfbuzz_rs", branch = "master", service = "github" }

[features]
default = ["build-native-harfbuzz", "build-native-freetype"]
build-native-harfbuzz = ["harfbuzz-sys/build-native-harfbuzz"]
build-native-freetype = ["harfbuzz-sys/build-native-freetype"]

[dependencies]
harfbuzz-sys = { version = "0.5", default-features = false }
rusttype = { version = "0.9", optional = true }
bitflags = "^1"
